--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "yiisoft/yii2-httpclient": "^2.0",
         "dejurin/php-google-translate-for-free": "^1.0",
         "la-haute-societe/yii2-save-relations-behavior": "*",
-        "yiisoft/yii2-imagine": "^2.3"
+        "yiisoft/yii2-imagine": "^2.3",
+        "dektrium/yii2-user": "^0.9.14"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
